[package]
edition = "2021"
name = "httpie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = {version = "3.1.8", features = ["derive"]}
colored = "2.0.0"
jsonxf = "1.1.1"
mime = "0.3.16"
reqwest = "0.11.10"
tokio = {version = "1.17.0", features = ["full"]}
